fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body{
     opacity: 0.8;
     padding: 20px;
     background-color: #060606;
-    margin-bottom: 20px;
+    margin-bottom: auto;
 }
     
 h3{
@@ -100,7 +100,6 @@ h5{
     border-radius: 10px;
     width: 100%;
     opacity: 0.8;
-    margin-bottom: 10px;
 
 }
 .button{
@@ -148,23 +147,6 @@ h5{
         background-blend-mode: normal;
         background-position: center;
         background-attachment: fixed;
-    }
-    .center{
-        width: 100%;
-    }
-    .outdiv{
-        width: 100%;
-        height: 100px;
-    }
-    .quote{
-        font-size: 20px;
-    }
-    .button{
-        font-size: 10px;
-        padding: 5px 2px;
-    }
-    .link{
-        font-size: 15px;
     }
  }
 @media (max-width: 1024px) and (orientation: landscape) {
